[gd_scene load_steps=2 format=3 uid="uid://cjngnuntq4518"]

[ext_resource type="Script" path="res://Assets/Scenes/DebugScene/ManaDebug.gd" id="1_t5cfn"]

[node name="DebugScene" type="Node2D"]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ManaDebug" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 48.0
offset_right = 42.0
offset_bottom = 88.0
script = ExtResource("1_t5cfn")

[node name="AirMana" type="Label" parent="Control/ManaDebug"]
layout_mode = 2
text = "Fnorp"

[node name="WaterMana" type="Label" parent="Control/ManaDebug"]
layout_mode = 2
text = "Fnorp"

[node name="FireMana" type="Label" parent="Control/ManaDebug"]
layout_mode = 2
text = "Fnorp"

[node name="EarthMana" type="Label" parent="Control/ManaDebug"]
layout_mode = 2
text = "Fnorp"
